src/test/deca/context/valid/self/cast.deca
{
    int x = 3;
    float y = 3;
    (float)(x);
    println(x);
    println(y);
}