src/test/deca/context/invalid/self/champNonDeclare.deca
class A{

    int add(int x){
        return this.y+x;
    }
}